--- a/index.html
+++ b/index.html
@@ -9,18 +9,14 @@
 </head>
 <body>
 <h1>Library</h1>
+<h2>Add your favorite book to the library!</h2>
 <table id="table">
     <tr>
         <th>Title</th>
         <th>Author</th>
         <th>Pages</th>
         <th>Have/Have Not Read</th>
-    </tr>
-    <tr>
-        <td>Harry Potter</td>
-        <td>J K Rowling</td>
-        <td>562</td>
-        <td>Have Read</td>
+        <th>Remove</th>
     </tr>
 </table>
 <button id="add-book">Add Book</button>
@@ -34,10 +30,6 @@
     <div class="checkbox1">
         <input type="checkbox" id="have-read" name="have-read" value="have-read">
         <label for="have-read"> I have read this</label>
-    </div>
-    <div class="checkbox2">
-        <input type="checkbox" id="have-not-read" name="have-not-read" value="have-not-read">
-        <label for="have-not-read"> I have not read this</label>
     </div>
     <button type="submit">Submit</button>
 </form>
